# ghwatch

./: .gitignore  pyproject.toml
ghwatch/: github.py  gui.py
task-tracker/: app.py  gui.py  requirements.txt
